--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </script>
        <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2PAeJRcEgyodhlzKcT4pa1qHEmonxlLM&callback=startApp"
-         onerror="errorHandling()">
+    onerror="googleError()">
     </script>
   </body>
 </html>
